Update select styling in index.html
Chrome display issue with select (drop down) needs a small tweak to the CSS

--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
 
         select {
             padding: 5px;
+            border: 2px solid #bbb;
+            border-radius: 2px;
         }
 
         .wrap {
